--- a/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
+++ b/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
@@ -4,14 +4,14 @@
 
   <ng-container *ngIf="isNode">
     <!-- ND -->
-    <span *ngFor="let mapping of dataService.networkSelected.mappings.nodesDiscrete; let mapIndex = index;">
+    <span *ngFor="let mapping of dataService.selectedNetwork.mappings.nodesDiscrete; let mapIndex = index;">
       <span *ngFor="let style of mapping.styleMap; let propertyIndex = index;">
         <div *ngIf="mapping.col === propertyToMap.name && style.cssKey === styleProperty"
              class="alert alert-danger"
              role="alert">
           <h5>
             <button
-              [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, 'nd' + mapIndex, propertyIndex ]} }]"
+              [routerLink]="['', { outlets: {primary: ['edit', dataService.selectedNetwork.id, 'nd' + mapIndex, propertyIndex ]} }]"
               class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD' | translate}}"
               placement="right"
@@ -28,14 +28,14 @@
 
   <ng-container *ngIf="!isNode">
     <!-- ED -->
-    <span *ngFor="let mapping of dataService.networkSelected.mappings.edgesDiscrete; let mapIndex = index;">
+    <span *ngFor="let mapping of dataService.selectedNetwork.mappings.edgesDiscrete; let mapIndex = index;">
       <span *ngFor="let style of mapping.styleMap; let propertyIndex = index;">
         <div *ngIf="mapping.col === propertyToMap.name && style.cssKey === styleProperty"
              class="alert alert-danger"
              role="alert">
           <h5>
             <button
-              [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, 'ed' + mapIndex, propertyIndex ]} }]"
+              [routerLink]="['', { outlets: {primary: ['edit', dataService.selectedNetwork.id, 'ed' + mapIndex, propertyIndex ]} }]"
               class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD' | translate}}"
               placement="right"
@@ -55,13 +55,13 @@
 <ng-template #continuousBlock>
   <ng-container *ngIf="isNode">
     <!-- NC -->
-    <span *ngFor="let nodeMap of dataService.networkSelected.mappings.nodesContinuous; let mapIndex = index;">
+    <span *ngFor="let nodeMap of dataService.selectedNetwork.mappings.nodesContinuous; let mapIndex = index;">
         <div *ngIf="nodeMap.col === propertyToMap.name && nodeMap.styleProperty == styleProperty"
              class="alert alert-danger"
              role="alert">
           <h5>
             <button
-              [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, 'nc' + mapIndex ]} }]"
+              [routerLink]="['', { outlets: {primary: ['edit', dataService.selectedNetwork.id, 'nc' + mapIndex ]} }]"
               class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD' | translate}}"
               placement="right"
@@ -78,13 +78,13 @@
 
   <ng-container *ngIf="!isNode">
     <!-- EC -->
-    <span *ngFor="let edgeMap of dataService.networkSelected.mappings.edgesContinuous; let mapIndex = index;">
+    <span *ngFor="let edgeMap of dataService.selectedNetwork.mappings.edgesContinuous; let mapIndex = index;">
         <div *ngIf="edgeMap.col === propertyToMap.name && edgeMap.styleProperty == styleProperty"
              class="alert alert-danger"
              role="alert">
           <h5>
             <button
-              [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, 'ec' + mapIndex ]} }]"
+              [routerLink]="['', { outlets: {primary: ['edit', dataService.selectedNetwork.id, 'ec' + mapIndex ]} }]"
               class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD' | translate}}"
               placement="right"
