[WIP] mappings detail for discrete mappings has only table row highlighting if selected for deletion

--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -27,7 +27,7 @@
 
       <tbody>
       <tr *ngFor="let style of dataService.selectedDiscreteMapping.styleMap; let styleIndex = index"
-          [ngClass]="(style === dataService.selectedDiscreteMappingProperty) ? 'table-danger' : 'table-info'">
+          [ngClass]="(style === dataService.selectedDiscreteMappingProperty) ? 'table-danger' : ''">
         <td>{{style.cssKey}}</td>
         <td *ngFor="let val of style.cssValues">
           {{val}}
