[WIP] linechart for continuous non-color mappings preview fixed, was using wrong chartOptions. Also adding margin below delete-confirmation in main mappings

--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -195,7 +195,7 @@
   </div>
 
   <!-- SHOW SINGLE DELETION DIALOGUE -->
-  <div *ngIf="showSingleDeletionDialogue && !showGlobalDeletionDialogue">
+  <div *ngIf="showSingleDeletionDialogue && !showGlobalDeletionDialogue" class="mb-3">
     <div class="alert alert-danger" role="alert">
       {{'MAIN_MAPPINGS_SINGLE_CONFIRM_DELETION' | translate}}
     </div>
